--- a/tasks/section_6/cis_6.2.x.yml
+++ b/tasks/section_6/cis_6.2.x.yml
@@ -300,6 +300,7 @@
       label: "{{ rhel9cis_passwd_label }}"
   when:
       - min_int_uid | int <= item.uid
+      - item.id != 'nobody'
       - rhel9cis_rule_6_2_10
   tags:
       - skip_ansible_lint  # settings found on 6_2_7
