--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -111,7 +111,8 @@
 - name: capture /etc/password variables
   include_tasks: parse_etc_password.yml
   when:
-      - rhel9cis_section6
+      - rhel9cis_section5 or
+        rhel9cis_section6
   tags:
       - rule_5.5.2
       - rule_5.6.2
